# minecraft

./: .gitignore  CMakeLists.txt  README.md  world_config.ini  world_config_performance.ini  world_config_ultra_fast.ini
.github/chatmodes/: Super coder.chatmode.md
assets/shaders/: basic.frag  basic.vert  cloud.frag  cloud.vert  hotbar.frag  hotbar.vert  skybox.frag  skybox.vert  sun.frag  sun.vert
docs/: STRUCTURE.md
include/core/: Game.h  GameLoop.h
include/engine/: AssetManager.h
include/engine/graphics/: Camera.h  ChunkRenderer.h  CloudRenderer.h  Frustum.h  InstancedRenderer.h  Mesh.h  OcclusionCuller.h  OpenGL.h  OpenGLResource.h  Shader.h  ShaderManager.h  SkyboxRenderer.h  SunRenderer.h  Texture.h  Window.h
include/entities/: Entity.h  ItemEntity.h  Player.h
include/ui/: BlockOutline.h  Crosshair.h  DigitRenderer.h  Hotbar.h  LoadingScreen.h  RayVisualization.h
include/utils/: Debug.h  MemoryPool.h  ModernCpp.h  PerformanceMonitor.h  Profiler.h  RaycastDebug.h  RaycastUtil.h
include/world/: Block.h  BlockDefinition.h  Chunk.h  ChunkLODManager.h  GreedyMeshing.h  ModularWorldGenerator.h  PackedBlockStorage.h  PerlinNoise.h  TerrainGenerator.h  World.h  WorldConfig.h
include/world/features/: TreeFeature.h
src/: main.cpp
src/core/: Game.cpp
src/engine/: AssetManager.cpp
src/engine/graphics/: Camera.cpp  ChunkRenderer.cpp  CloudRenderer.cpp  Mesh.cpp  Shader.cpp  SkyboxRenderer.cpp  SunRenderer.cpp  Texture.cpp  Window.cpp
src/entities/: Entity.cpp  ItemEntity.cpp
src/ui/: BlockOutline.cpp  Crosshair.cpp  Hotbar.cpp  LoadingScreen.cpp  RayVisualization.cpp
src/utils/: RaycastUtil.cpp
src/world/: Block.cpp  BlockDefinition.cpp  Chunk.cpp  ModularWorldGenerator.cpp  PerlinNoise.cpp  TerrainGenerator.cpp  World.cpp  WorldConfig.cpp
(+2 files in other folders)
